[metadata]
name = iw-parser
description = A helper to parse iw output
long_description = file: README.rst
url = 
author = Chaitanya Tata
author_email = Chaitanya.tk17@gmail.com
license = Apache License 2.0

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude = tests

[options.extras_require]
dev = flake8; mypy; black>=20.8b0;
docs = sphinx; sphinx_rtd_theme

[options.entry_points]
console_scripts=
	iw-dump-csv = iw_parser.iw_dump_to_csv:main